--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -100,6 +100,8 @@ h1, h2, h3, h4, h5, h6 {
 
 #main_content h3 {
   font-size: 18px;
+  margin-left:-20px;
+  font-weight:bold;
 }
 
 #main_content h4 {
