--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -63,11 +63,10 @@ header h1 {
   -webkit-font-smoothing: antialiased;
 }
 
-header h2 {
-  font-size: 18px;
+header span {
+  font-size: 14px;
   font-weight: 300;
-  margin: 0 0 0 -30px;
-  color: #ccc;
+  padding-left: 0.5em;
 }
 
 /* Main Content
