--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -22,7 +22,7 @@ section {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 0 0 20px;
+  margin: 0 0 1em;
 }
 
 li {
@@ -34,6 +34,26 @@ li {
    h1       - project name
    h2       - project description
 */
+
+h1 {
+  font-size: 26px;
+  line-height: 1.5;
+  margin: 0 0 0 -30px;
+  font-weight: bold;
+  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  color: #fff;
+  letter-spacing: -1px;
+  -webkit-font-smoothing: antialiased;
+}
+
+h3 {
+  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
+  color: #FCC240;
+  letter-spacing: -0.03em;
+  font-size: 1.1em;
+  margin-left:-20px;
+  font-weight:bold;
+}
 
 footer {
   width: 100%;
@@ -52,17 +72,6 @@ header {
   margin: 0 0 40px 0;
 }
 
-header h1 {
-  font-size: 26px;
-  line-height: 1.5;
-  margin: 0 0 0 -30px;
-  font-weight: bold;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #fff;
-  letter-spacing: -1px;
-  -webkit-font-smoothing: antialiased;
-}
-
 header span {
   font-size: 14px;
   font-weight: 300;
@@ -78,44 +87,6 @@ header span {
 }
 section img {
   max-width: 100%
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: normal;
-  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
-  color: #FCC240;
-  letter-spacing: -0.03em;
-}
-
-#main_content h1 {
-  font-size: 30px;
-}
-
-#main_content h2 {
-  font-size: 24px;
-}
-
-#main_content h3 {
-  font-size: 18px;
-  margin-left:-20px;
-  font-weight:bold;
-}
-
-#main_content h4 {
-  font-size: 14px;
-}
-
-#main_content h5 {
-  font-size: 12px;
-  text-transform: uppercase;
-  margin: 0 0 5px 0;
-}
-
-#main_content h6 {
-  font-size: 12px;
-  text-transform: uppercase;
-  color: #999;
-  margin: 0 0 5px 0;
 }
 
 dt {
@@ -149,9 +120,9 @@ pre {
   padding: 10px;
   font-size: 14px;
   color: #b5e853;
-  border-radius: 2px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
+  border-radius: 2px;
   text-wrap: normal;
   overflow: auto;
   overflow-y: hidden;
