--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -173,3 +173,21 @@ a {
 .cf {
   zoom:1;
 }
+
+@media all and (max-device-width : 699px) {
+
+  body {
+    font-size:50px;
+  }
+
+}
+
+@media all and (max-device-width : 699px), all and (max-width: 699px) {
+
+ .container {
+    max-width: none;
+    width: 90%;
+    margin: 0 auto;
+  }
+
+}
