--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -174,6 +174,11 @@ a {
   display: none;
 }
 
+/* h-entry */
+.h-entry .p-name {
+  display: none;
+}
+
 @media all and (max-device-width : 699px) {
 
   body {
