--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -4,7 +4,7 @@ body {
   background: #222;
   font-size: 16px;
   color: #eaeaea;
-  font-family: Optima, Arial;
+  font-family: MyriadPro-Regular, 'Myriad Pro Regular', MyriadPro, 'Myriad Pro', Lucida Sans, Segoe UI, Calibri, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
