--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -30,6 +30,7 @@ text, tspan {
 }
 
 h1, h2, h3, h4, h5, h6 {
+  color: rgba(0,0,0,0.8);
   letter-spacing: 0.01em;
   padding: 1.5em 0 0 0;
   margin: 0;
@@ -42,7 +43,6 @@ h1 {
   padding-top: 0;
   padding-bottom: 0;
   font-weight: bold;
-  color: #fff;
 }
 
 h1>a {
@@ -51,7 +51,6 @@ h1>a {
 }
 
 h2 {
-  color: rgba(0,0,0,0.8);
   line-height: 1.2em;
   font-size: 2.5em;
   font-weight:bold;
@@ -64,6 +63,7 @@ h3 {
 }
 
 p, ul, blockquote {
+  color: #444;
   font-size: 1.4em;
   padding: 0.5em 0 0 0;
   margin: 0;
