--- a/stylesheet/stylesheet.css
+++ b/stylesheet/stylesheet.css
@@ -43,6 +43,7 @@ h1 {
   padding-top: 0;
   padding-bottom: 0;
   font-weight: bold;
+  position: relative;
 }
 
 h1>a {
@@ -103,7 +104,7 @@ header {
   width:100%;
 }
 
-header span {
+header .links {
   font-size: 0.6em;
   font-weight: 300;
   padding-left: 0.2em;
@@ -168,7 +169,7 @@ a {
   display: none;
 }
 
-/* Make bigger font becauseidth of device is small */
+/* Make bigger font because width of device is small */
 @media all and (max-device-width : 400px) {
 
   body {
@@ -192,6 +193,14 @@ a {
     max-width: none;
     width: 90%;
     margin: 0 auto;
+  }
+
+  header .links {
+    position: absolute;
+    left: 0;
+    top: 2.2em;
+    font-size: 0.4em;
+    padding-left: 0;
   }
 
 }
